# streamfox-live

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/router/: index.ts
frontend/src/views/: main.vue
