[package]
name = "streamfox-live"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["http1", "tokio"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["macros", "net", "rt-multi-thread"] }
toml-env = { version = "1.2.0", default-features = false }
tower-http = { version = "0.5.2", default-features = false, features = ["trace"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi", "fmt"] }

[profile.release]
opt-level = 2
lto = "thin"
